--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: stockyard
 
 # Short bio or description (displayed in the header)
-description: a collection of some random numbers
+description: some random numbers
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: http://i.imgur.com/sBjKg9e.png
