--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: stockyard
 description: some random numbers
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: http://i.imgur.com/sBjKg9e.png
+avatar: http://i.imgur.com/AvfYoGb.jpg
 
 #
 # Flags below are optional
